Less files fixed and stretch goals

--- a/css/index.css
+++ b/css/index.css
@@ -1,95 +1,120 @@
-/* Compile your LESS file! */
-
-
-nav {
-    display: flex;
-    background-color: skyblue;
+* {
+  box-sizing: border-box;
 }
-
-a {
-text-decoration: none;
-color: grey;
-justify-content: center;
-padding: 2%;
+html,
+body {
+  height: 100%;
 }
-
-
-.about{
-background-color: pink;
-padding: 2%;
-height: 60vh;
-display: flex;
-justify-content: center;
+.nav nav {
+  display: flex;
+  background-color: skyblue;
 }
-
-.abouth1{
-    padding-right: 2%;
-    font-size: 5em;
+.nav a {
+  text-decoration: none;
+  color: grey;
+  justify-content: center;
+  padding: 2%;
 }
-.aboutp{
-font-size: 2em;
-padding-top: 15%;
+#header,
+.about {
+  background-color: pink;
+  padding: 2%;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
 }
-
-
-
-.skills{
-display: flex;
+#header .abouth1 {
+  padding-right: 1%;
+  font-size: 5em;
 }
-.skillscolumns{
-display:flex;
-flex-direction: column;
-border: solid;
+#header .aboutp {
+  font-size: 2em;
+  padding-top: 15%;
 }
-
-.programming{
-display: flex;
+#middle .skills {
+  display: flex;
 }
-.lang{
-display:flex;
-flex-direction: column;
-border: solid;
-font-size: 3em;
-margin: 0 auto;
-width: 40%
+#middle .skillscolumns {
+  display: flex;
+  flex-direction: column;
+  border: solid;
+  margin-top: 5%;
 }
-
-.work{
-display: flex;
-background-color: pink;
+#middle .programming {
+  display: flex;
 }
-
-.jobs{
-border: solid;
-width: 50%;
-padding-bottom: 3%;
+#middle .lang {
+  display: flex;
+  flex-direction: column;
+  border: solid;
+  font-size: 3em;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 40%;
 }
-.jobs h2{
-font-size: 3em;
+#bottom .work {
+  display: flex;
+  background-color: pink;
 }
-.jobs ul{
-font-size: 2em;
+#bottom .jobs {
+  border: solid;
+  width: 50%;
+  padding-bottom: 3%;
 }
-
-
-.address h2{
- font-size: 2em;
+#bottom .jobs h2 {
+  font-size: 3em;
 }
-
-@media (max-width: 500px){
-html{
+#bottom .jobs ul {
+  font-size: 2em;
+}
+.address h2 {
+  font-size: 2em;
+}
+@media (max-width: 500px) {
+  html {
     margin: 0 auto;
-}
-.about{
+  }
+  .about {
     height: 30vh;
     width: 100%;
+  }
+  .abouth1 {
+    display: none;
+  }
+  .aboutp {
+    font-size: 20%;
+  }
+  .jobs {
+    font-size: 25%;
+  }
+  .programming {
+    font-size: 25%;
+  }
+  .lang {
+    margin-right: 3%;
+  }
 }
-.abouth1{
-    font-size: 80%;
+* {
+  box-sizing: border-box;
 }
-.aboutp{
-    font-size: 75%;
+html,
+body {
+  height: 100%;
 }
-
+nav {
+  display: flex;
+  background-color: skyblue;
 }
-
+a {
+  text-decoration: none;
+  color: grey;
+  justify-content: center;
+  padding: 2%;
+}
+.header .about {
+  background-color: pink;
+  padding: 2%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+}
